# Student_OS_rust

./: .gitignore  TODO.md  req.js  req2.js  student-os.keystore  student_os_data.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.ts  main.tsx  store.ts
frontend/src/components/dashboard/: CalendarView.tsx
frontend/src/components/editor/: NotionEditor.tsx
frontend/src/components/layout/: Sidebar.tsx  Topbar.tsx
frontend/src/components/modals/: CreateEntryModal.tsx
frontend/src/pages/: Dashboard.tsx  EntryEditor.tsx  Flashcards.tsx  SearchPage.tsx
frontend/src/utils/: formatters.ts
frontend_vanilla/: vite.config.ts
frontend_vanilla/src/: style.css
src/: api.js  index.html  main.js  styles.css  ui.js
src-tauri/: Cargo.toml  run_test.rs  tauri.conf.json  test_opt.rs  test_serde.rs
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: db.rs  fsrs_scheduler.rs  logic.rs  loro_manager.rs  mod.rs  models.rs
