[package]
name = "student_os_rust"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "student_os_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
fsrs-ml = ["fsrs"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
fsrs = { version = "5", optional = true }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
trailbase-client = "0.5.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1", features = ["v4", "v7"] }
loro = "1.2.5"
base64 = "0.22"
hex = "0.4"
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
opt-level = 3
lto = true        # This is the same as "fat" but more compatible
codegen-units = 1 # Better optimization, slower build
panic = "abort"   # Strips out more code, makes the binary even smaller
